# sem3

./: LICENSE  README.md
1/: .gitignore  CMakeLists.txt  README.md  detail.cpp  detail.hpp  main.cpp  main.hpp  unit_tests.cpp
1/test/: CMakeLists.txt  unit_tests.cpp
2/: .gitignore  CMakeLists.txt  README.md  allocator.cpp  allocator.hpp  complex_signal.cpp  complex_signal.hpp  main.cpp  signal.cpp  signal.hpp
2/allocator/: CMakeLists.txt  allocator.cpp  allocator.hpp
2/complex_signal/: CMakeLists.txt  complex_signal.cpp  complex_signal.hpp
2/doc/: CMakeLists.txt
2/signal/: CMakeLists.txt  signal.cpp  signal.hpp
2/test/: CMakeLists.txt  unit_tests.cpp  unit_tests_allocator.cpp  unit_tests_complex_signal.cpp  unit_tests_signal.cpp
3/: .clang-tidy  .editorconfig  CMakeLists.txt  README.md
3/data/: game_save.json  schools.json
3/doc/: CMakeLists.txt  README.md  header.tex
3/src/: CMakeLists.txt  main.cpp
3/src/ability/: ability.hpp
3/src/game/: game.cpp  game.hpp  game_saver.cpp  game_saver.hpp  json_parser.hpp
3/src/managers/: action_manager.cpp  action_manager.hpp  damage_manager.cpp  damage_manager.hpp  entity_manager.cpp  entity_manager.hpp  game_manager.cpp  game_manager.hpp  map_manager.cpp  map_manager.hpp  singleton_init.cpp  singleton_manager.cpp  singleton_manager.hpp  summon_manager.cpp  summon_manager.hpp
3/src/map/: CMakeLists.txt  entity_list.cpp  entity_list.hpp  map.cpp  map.hpp
3/src/map/cell/: CMakeLists.txt  cell.cpp  cell.hpp  time.hpp
3/src/map/cell/builders/: cell_builder.hpp  cell_director.hpp  effect_cell_damage_builder.hpp  effect_cell_hp_builder.hpp  effect_cell_range_builder.hpp  effect_cell_speed_builder.hpp
3/src/map/cell/effect_cell/: effect_cell_damage.hpp  effect_cell_hp.hpp  effect_cell_range.hpp  effect_cell_speed.hpp  i_effect_cell.hpp
3/src/map/matrix/: a.out  iterator.hpp  matrix.hpp  test.cpp
3/src/queue/: CMakeLists.txt  queue.cpp  queue.hpp
3/src/queue/entity/: entity.hpp  summoner.hpp
3/src/queue/entity/builder/: amoral_troop_builder.hpp  entity_builder.hpp  entity_director.hpp  moral_troop_builder.hpp  summoner_builder.hpp  troop_builder.hpp
3/src/queue/entity/troop/: amoral_troop.hpp  base_troop.hpp  i_moral.hpp  moral_troop.hpp
3/src/schools/: CMakeLists.txt  schools.cpp  schools.hpp
3/src/schools/builders/: ability_builder.cpp  ability_builder.hpp  creature_builder.cpp  creature_builder.hpp  director.hpp  school_builder.cpp  school_builder.hpp  schools_director.cpp  schools_director.hpp
3/src/schools/school/: CMakeLists.txt  school.cpp  school.hpp
3/src/schools/school/ability/: ability.cpp  ability.hpp  creature.cpp  creature.hpp
3/src/ui/: board.cpp  board.hpp  control.cpp  control.hpp  view.cpp  view.hpp
3/src/utilities/: effect_system.hpp  exceptions.hpp  name_id.hpp  position.hpp  type_system.hpp
3/src/view/: board.cpp  board.hpp
3/test/: CMakeLists.txt  unit_tests_ability.cpp  unit_tests_base_troop.cpp  unit_tests_cell.cpp  unit_tests_creature.cpp  unit_tests_director.cpp  unit_tests_effect_cells.cpp  unit_tests_entity.cpp  unit_tests_exceptions.cpp  unit_tests_json_parser.cpp  unit_tests_map_manager.cpp  unit_tests_matrix.cpp  unit_tests_moral_troop.cpp  unit_tests_name_id.cpp  unit_tests_position.cpp  unit_tests_school.cpp  unit_tests_schools.cpp  unit_tests_summon_manager.cpp  unit_tests_summoner.cpp  unit_tests_time.cpp  unit_tests_troop.cpp  unit_tests_type_system.cpp
